# ml-pipeline

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: churn.yaml
docs/: ARCHITECTURE.md
notebooks/: 01_reliability.py  02_drift.py
src/ml_pipeline/: __init__.py  cli.py
src/ml_pipeline/commands/: calibrate.py  doctor.py  drift.py  eval.py  infer.py  train.py
src/ml_pipeline/lib/: __init__.py  calibration.py  config.py  data.py  drift.py  model.py  tracking.py
tests/: test_cli_smoke.py
