[project]
name = "ml-pipeline"
version = "0.1.0"
description = "Classic ML done right — a CLI-first churn pipeline with an honest baseline, probability calibration, and drift monitoring. Tracked in MLflow, fully CPU-verified."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Ruben Haisma" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "mlflow>=2.14",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",
    "pyyaml>=6.0",
    "joblib>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "marimo>=0.8",
]

[project.scripts]
mlp = "ml_pipeline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_pipeline"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
